Stop unnecessary horizontal scroll on overview screen on mobiles

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -76,6 +76,8 @@
 		padding: 0;
 
 		.section {
+			padding: 0 15px;
+
 			.sect-graph {
 				height: initial;
 				padding: 0;
